--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "cd client && npm start"
+    "start": "cd client && npm start",
+    "build": "cd client && npm run build"
   },
   "dependencies": {
     "serve": "^11.3.0"
