--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "scripts": {
     "heroku-prebuild": "cd client && npm i",
     "build": "cd client && npm run build"
+  },
+  "dependencies": {
+    "serve": "^11.3.0"
   }
 }
