--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,25 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/d3": "^5.7.2",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.4",
+    "apollo-boost": "^0.4.7",
     "bootstrap": "^4.4.1",
     "d3": "^5.15.0",
+    "graphql": "^14.3.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.0.0",
     "react-d3-tree": "^1.16.1",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
