--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "bootstrap": "^4.4.1",
     "d3": "^5.15.0",
     "graphql": "^14.3.1",
+    "jquery": "^3.5.0",
     "node-sass": "^4.13.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.0",
     "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.0.0",
