--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "build": "cd client && npm run build"
   },
   "dependencies": {
-    "serve": "^11.3.0"
+    "ts-node": "^8.8.2"
   },
   "devDependencies": {}
 }
