--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "cd client && npm run build"
   },
   "dependencies": {
-    "ts-node": "^8.8.2"
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {}
 }
