--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "scripts": {
     "heroku-prebuild": "cd client && npm i",
-    "build": "cd client && npm run build"
-  },
-  "dependencies": {
-    "ts-node": "^8.8.2",
-    "typescript": "^3.8.3"
-  },
-  "devDependencies": {}
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "cd server && npm i"
+  }
 }
