--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,12 @@
   "devDependencies": {
     "@prisma/cli": "^2.0.0-beta.1",
     "@types/node": "^13.11.0",
-    "nodemon": "^2.0.3",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.8.3"
+    "nodemon": "^2.0.3"
   },
   "dependencies": {
     "@prisma/client": "^2.0.0-beta.1",
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8.3"
   }
 }
