--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "scripts": {
-    "heroku-prebuild": "cd client && npm i",
+    "heroku-prebuild": "npm i && cd client && npm i",
     "build": "cd client && npm run build",
     "heroku-postbuild": "cd server && npm i"
+  },
+  "dependencies": {
+    "typescript": "^3.8.3"
   }
 }
