--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "heroku-postbuild": "cd server && npm i && npx prisma generate"
   },
   "dependencies": {
+    "@prisma/cli": "^2.0.0-beta.1",
     "typescript": "^3.8.3"
   }
 }
