--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "d3": "^5.15.0",
     "graphql": "^14.3.1",
     "jquery": "^3.5.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "4.13.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.0",
     "react-apollo": "^3.1.5",
