building client using the heroku prebuild hook

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "heroku-prebuild": "npm i && cd client && npm i",
-    "build": "cd client && npm run build",
+    "heroku-prebuild": "npm i && cd client && npm i && npm run build",
     "heroku-postbuild": "cd server && npm i && npx prisma generate"
   },
   "dependencies": {
