--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "heroku-prebuild": "npm i && cd client && npm i && npm run build",
-    "heroku-postbuild": "cd server && npm i && npx prisma generate"
+    "heroku-postbuild": "cd server && npm i && cd .. && npx prisma generate"
   },
   "dependencies": {
     "@prisma/cli": "^2.0.0-beta.1",
