--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "@prisma/client": "^2.0.0-beta.1",
+    "@types/mongodb": "^3.5.16",
     "graphql-yoga": "^1.18.3",
+    "mongodb": "^3.5.7",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   }
