--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,12 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.4",
     "apollo-boost": "^0.4.7",
+    "apollo-link-context": "^1.0.20",
     "bootstrap": "^4.4.1",
     "d3": "^5.15.0",
     "graphql": "^14.3.1",
     "jquery": "^3.5.0",
-    "node-sass": "4.13.1",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.0",
     "react-apollo": "^3.1.5",
