--- a/client/src/auth_config.json
+++ b/client/src/auth_config.json
@@ -1,4 +1,5 @@
 {
   "domain": "pureokrs-dev.eu.auth0.com",
-  "clientId": "gC0olSzIxmKg2j59CXfWAslkROFqyfSP"
+  "clientId": "gC0olSzIxmKg2j59CXfWAslkROFqyfSP",
+  "audience": "http://localhost:4000/graphql"
 }
