--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,13 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.16",
+    "apollo-server": "^2.13.1",
+    "apollo-server-express": "^2.13.1",
     "graphql-yoga": "^1.18.3",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.8.0",
     "mongodb": "^3.5.7",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
