--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "sass": "^1.42.1",
     "typescript": "^3.8.3"
   },
   "scripts": {
@@ -48,7 +49,8 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not ie 11"
     ],
     "development": [
       "last 1 chrome version",
